professional + personal projects

--- a/src/components/ProjectPage.astro
+++ b/src/components/ProjectPage.astro
@@ -12,6 +12,7 @@ export interface Props {
         github?: string;
         hidden: boolean;
         tags?: string[];
+        type: string;
     };
 }
 
