--- a/src/pages/projects/factor-e.astro
+++ b/src/pages/projects/factor-e.astro
@@ -12,6 +12,7 @@ export const metadata = {
     github: "https://github.com/hex248/factor-e",
     hidden: false,
     tags: ["Game", "C++", "OpenGL", "CMake", "Pixel Art"],
+    type: "personal",
 };
 ---
 
