--- a/src/pages/projects/shleep.astro
+++ b/src/pages/projects/shleep.astro
@@ -10,18 +10,16 @@ export const metadata = {
     image: "/shleep-icon.svg",
     url: "https://bigbootstudio.itch.io/shleep",
     hidden: true,
-    tags: [
-        "Unity",
-        "C#",
-        "HLSL",
-        "Shader Graph",
-		"Visual Effects Graph"
-    ],
+    tags: ["Unity", "C#", "HLSL", "Shader Graph", "Visual Effects Graph"],
+    type: "personal",
 };
 ---
 
 <ProjectPage metadata={metadata}>
-    <p>Shleep is a couch co-op base defense game where you can build towers to help aid you and your party to protect a sleeping child from nightmares.</p>
+    <p>
+        Shleep is a couch co-op base defense game where you can build towers to
+        help aid you and your party to protect a sleeping child from nightmares.
+    </p>
 
     <p>images here</p>
 
