--- a/src/pages/projects/wiskatron.astro
+++ b/src/pages/projects/wiskatron.astro
@@ -12,6 +12,7 @@ export const metadata = {
     github: "https://github.com/hex248/wiskatron",
     hidden: false,
     tags: ["Web", "React", "TypeScript", "Spotify API"],
+    type: "personal",
 };
 ---
 
