Software Developer Junior -> Junior Software Developer

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -143,8 +143,8 @@ const sortedTags = Array.from(allTags).sort((a, b) => a.localeCompare(b));
             <span class="text-ayu-red-500 font-500">Name: </span>Oliver Bryan
         </li>
         <li>
-            <span class="text-ayu-blue-500 font-500">Role: </span>Software
-            Developer Junior
+            <span class="text-ayu-blue-500 font-500">Role: </span>Junior
+            Software Developer
         </li>
         <li>
             <span class="text-ayu-red-500 font-500">Education: </span>Final Year
@@ -199,7 +199,7 @@ const sortedTags = Array.from(allTags).sort((a, b) => a.localeCompare(b));
             </>
         )
     }
- 
+
     <h2 class="text-2xl font-600 text-ayu-green-500 mt-6">PERSONAL PROJECTS</h2>
 
     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 gap-4 py-2">
