added empty images to shleep page

--- a/src/pages/projects/mizu.astro
+++ b/src/pages/projects/mizu.astro
@@ -32,10 +32,8 @@ export const metadata = {
         leading a team and scaling a live application.
     </p>
 
-    <p>images here</p>
-
     <div class="bg-ayu-highlight p-4 rounded mt-4">
-        <h2 class="text-lg text-ayu-accent mb-2">Technologies</h2>
+        <h2 class="text-lg text-ayu-green-500 mb-2">Technologies</h2>
         <ul class="list-disc list-inside space-y-1">
             <li>Node.js</li>
             <li>TypeScript</li>
@@ -45,4 +43,6 @@ export const metadata = {
             <li>AWS S3</li>
         </ul>
     </div>
+
+    <p>images here</p>
 </ProjectPage>
