--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -12,8 +12,13 @@ const { currentPage } = Astro.props;
         <title>ob - {currentPage.title}</title>
     </head>
     <body>
-        <Header currentPage={currentPage} />
-        <div class="px-4 py-4">
+        <Header
+            currentPage={currentPage}
+            innerClass="px-4 max-w-6xl w-6xl mx-auto"
+        />
+        <div
+            class="px-4 py-4 max-w-6xl lg:border-l-1 lg:border-r-1 lg:border-b-1 border-ayu-gutter mx-auto"
+        >
             <slot />
         </div>
     </body>
