bottom margin on large page

--- a/src/components/ProjectPage.astro
+++ b/src/components/ProjectPage.astro
@@ -22,20 +22,6 @@ metadata.tags?.sort();
 ---
 
 <style>
-    a {
-        text-decoration: none;
-        border-bottom: 1px solid var(--ayu-blue-500);
-        color: var(--ayu-blue-500);
-        transition:
-            color 0.1s,
-            border-color 0.1s;
-        margin-bottom: 16px;
-    }
-    a:hover {
-        color: var(--ayu-blue-600);
-        border-color: var(--ayu-blue-600);
-    }
-
     .github {
         color: var(--ayu-green-500);
         border: none;
@@ -43,6 +29,10 @@ metadata.tags?.sort();
     .github:hover {
         color: var(--ayu-green-500);
         text-decoration: underline;
+    }
+
+    .green {
+        color: var(--ayu-green-500);
     }
 </style>
 
