--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -14,10 +14,10 @@ const { currentPage } = Astro.props;
     <body>
         <Header
             currentPage={currentPage}
-            innerClass="px-4 max-w-6xl w-6xl mx-auto"
+            innerClass="px-4 max-w-5xl w-5xl mx-auto"
         />
         <div
-            class="px-4 py-4 max-w-6xl lg:border-l-1 lg:border-r-1 lg:border-b-1 border-ayu-gutter mx-auto"
+            class="px-4 py-4 max-w-5xl lg:mb-16 lg:border-l-1 lg:border-r-1 lg:border-b-1 border-ayu-gutter mx-auto"
         >
             <slot />
         </div>
