--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -274,3 +274,21 @@ body {
     -webkit-user-select: none;
     -o-user-select: none;
 }
+
+.green {
+    color: var(--ayu-green-500);
+}
+
+.link-project-page {
+    text-decoration: none;
+    border-bottom: 1px solid var(--ayu-blue-500);
+    color: var(--ayu-blue-500);
+    transition:
+        color 0.1s,
+        border-color 0.1s;
+    margin-bottom: 16px;
+}
+.link-project-page:hover {
+    color: var(--ayu-blue-600);
+    border-color: var(--ayu-blue-600);
+}
