--- a/src/pages/projects/glimpse.astro
+++ b/src/pages/projects/glimpse.astro
@@ -18,6 +18,7 @@ export const metadata = {
         "PostgreSQL",
         "Blob Storage",
         "Databases",
+        "OAuth2",
     ],
     type: "personal",
 };
