--- a/src/pages/projects/mizu.astro
+++ b/src/pages/projects/mizu.astro
@@ -49,9 +49,7 @@ export const metadata = {
 
     <div class="mt-4">
         <h2 class="text-2xl text-ayu-accent mb-3">Gameplay</h2>
-        <div
-            class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-4"
-        >
+        <div class="grid grid-cols-1 sm:grid-cols-2 gap-4">
             <Demo
                 image="/images/mizu/card.png"
                 title="Card (Large image)"
@@ -99,9 +97,7 @@ export const metadata = {
 
     <div class="mt-4">
         <h2 class="text-2xl text-ayu-accent mb-3">Pre-Production</h2>
-        <div
-            class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-4"
-        >
+        <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4">
             <Demo
                 image="/images/mizu/forage-design.png"
                 title="Forage Design"
