--- a/src/pages/projects/shleep.astro
+++ b/src/pages/projects/shleep.astro
@@ -35,9 +35,7 @@ export const metadata = {
 
     <div class="mt-4">
         <h2 class="text-2xl text-ayu-accent mb-3">Screenshots</h2>
-        <div
-            class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-4"
-        >
+        <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4">
             <Demo image="/images/shleep/1.png" title="1" type="boxed" />
             <Demo image="/images/shleep/2.png" title="2" type="boxed" />
             <Demo image="/images/shleep/3.png" title="3" type="boxed" />
