link-project-page class on "Try ..." link

--- a/src/components/ProjectPage.astro
+++ b/src/components/ProjectPage.astro
@@ -97,7 +97,7 @@ metadata.tags?.sort();
                     href={metadata.url}
                     target="_blank"
                     rel="noopener noreferrer"
-                    class="inline-block text-sm"
+                    class="link-project-page inline-block text-sm"
                 >
                     Try {metadata.title}
                 </a>
