published basic project post for good morning
- screenshots
- link to gm.ob248.com

--- a/src/pages/projects/good-morning.astro
+++ b/src/pages/projects/good-morning.astro
@@ -9,8 +9,9 @@ export const metadata = {
     date: "October 2025",
     slug: "good-morning",
     image: "/good-morning-icon.svg",
+    url: "https://gm.ob248.com",
     github: "https://github.com/hex248/good-morning",
-    hidden: true,
+    hidden: false,
     tags: [
         "Web",
         "React",
@@ -65,10 +66,26 @@ export const metadata = {
     <div class="mt-4">
         <h2 class="text-2xl text-ayu-accent mb-3">Demo</h2>
         <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
-            <Demo image="/images/good-morning/1.png" title="1" type="boxed" />
-            <Demo image="/images/good-morning/2.png" title="2" type="boxed" />
-            <Demo image="/images/good-morning/3.png" title="3" type="boxed" />
-            <Demo image="/images/good-morning/4.png" title="4" type="boxed" />
+            <Demo
+                image="/images/good-morning/notice.png"
+                title="Notice from partner"
+                type="boxed"
+            />
+            <Demo
+                image="/images/good-morning/no-notice.png"
+                title="No notice from partner"
+                type="boxed"
+            />
+            <Demo
+                image="/images/good-morning/create-notice.png"
+                title="Create notice"
+                type="boxed"
+            />
+            <Demo
+                image="/images/good-morning/me.png"
+                title="'Me' page"
+                type="boxed"
+            />
         </div>
     </div>
 </ProjectPage>
