login with google and partner pairing

--- a/src/pages/projects/good-morning.astro
+++ b/src/pages/projects/good-morning.astro
@@ -82,6 +82,16 @@ export const metadata = {
                 type="boxed"
             />
             <Demo
+                image="/images/good-morning/login-with-google.png"
+                title="Login with Google"
+                type="boxed"
+            />
+            <Demo
+                image="/images/good-morning/partner-pairing.png"
+                title="Partner pairing"
+                type="boxed"
+            />
+            <Demo
                 image="/images/good-morning/me.png"
                 title="'Me' page"
                 type="boxed"
