--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -120,12 +120,12 @@ const sortedTags = Array.from(allTags).sort((a, b) => a.localeCompare(b));
             hex248
         </a>
         / <a
-            href="mailto:04oliverbryan@gmail.com"
+            href="mailto:ob248@proton.me"
             class="upper-icon-link flex items-center gap-1"
             title="Email"
         >
             <Icon name="mdi:email-outline" class="w-5 h-5" />
-            04oliverbryan@gmail.com
+            ob248@proton.me
         </a>
         / <a
             href="/cv.pdf"
