--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,6 +1,20 @@
-@import url("https://fonts.googleapis.com/css2?family=Fira+Code:wght@300..700&display=swap");
-
 @import "tailwindcss";
+
+@font-face {
+    font-family: "Commit Mono";
+    src: url("/fonts/CommitMono/CommitMono VariableFont.woff2") format("woff2");
+    font-weight: 200 700;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: "Commit Mono";
+    src: url("/fonts/CommitMono/CommitMono VariableFont.woff2") format("woff2");
+    font-weight: 200 700;
+    font-style: italic;
+    font-display: swap;
+}
 
 :root {
     color-scheme: dark;
@@ -96,35 +110,35 @@
 }
 
 .font-300 {
-    font-family: "Fira Code", monospace;
+    font-family: "Commit Mono", monospace;
     font-optical-sizing: auto;
     font-weight: 300;
     font-style: normal;
 }
 
 .font-400 {
-    font-family: "Fira Code", monospace;
+    font-family: "Commit Mono", monospace;
     font-optical-sizing: auto;
     font-weight: 400;
     font-style: normal;
 }
 
 .font-500 {
-    font-family: "Fira Code", monospace;
+    font-family: "Commit Mono", monospace;
     font-optical-sizing: auto;
     font-weight: 500;
     font-style: normal;
 }
 
 .font-600 {
-    font-family: "Fira Code", monospace;
+    font-family: "Commit Mono", monospace;
     font-optical-sizing: auto;
     font-weight: 600;
     font-style: normal;
 }
 
 .font-700 {
-    font-family: "Fira Code", monospace;
+    font-family: "Commit Mono", monospace;
     font-optical-sizing: auto;
     font-weight: 700;
     font-style: normal;
@@ -133,7 +147,7 @@
 body {
     background-color: var(--ayu-bg);
     color: var(--ayu-fg);
-    font-family: "Fira Code", monospace;
+    font-family: "Commit Mono", monospace;
     font-weight: 400;
     font-style: normal;
 }
